--- a/example/api.html
+++ b/example/api.html
@@ -3,7 +3,9 @@
             text-transform: uppercase;
             font-weight:bold !important;
             display: flex !important;
-            align-items: center !important;
+            align-items: center;
+            justify-content: center;
+            min-width: auto !important;
         }
 
         .badge i {
